--- a/index.html
+++ b/index.html
@@ -5,67 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Секция Верхняя линия -->
     <header>
-      <a href="#"><span>Web</span>Studio</a>
+      <a class="logo" href="#"><span class="logo-web">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+        <ul class="nav-list">
+          <li class="nav-item current-page">
+            <a href="./index.html">Студия</a>
+          </li>
+          <li class="nav-item">
+            <a href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li>
+      <ul class="contact-list">
+        <li class="contact-item">
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="contact-item">
           <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <!-- Секция Шапка -->
-      <section>
-        <h1>Эффективные решения<br />для вашего бизнеса</h1>
-
-        <button type="button">Заказать услугу</button>
+      <section class="section-hero">
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <button class="bt-hero" type="button">Заказать услугу</button>
       </section>
       <!-- Секция Особенности -->
       <section>
-        <h2 hidden>Особенности</h2>
-        <!--ЗАГОЛОВОК НАДО БУДЕТ ПОТОМ СКРЫТЬ ЧЕРЕЗ CSS!!!!!-->
-        <ul>
-          <li>
+        <h2 class="visually-hidden">Особенности</h2>
+        <ul class="feature-list">
+          <li class="feature-item">
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -75,10 +82,10 @@
         </ul>
       </section>
       <!-- Секция Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="doing-section">
+        <h2 class="titles-sections">Чем мы занимаемся</h2>
+        <ul class="doing-list">
+          <li class="doing-item">
             <img
               src="./images/html.jpg"
               alt="Верстка сайтов"
@@ -86,7 +93,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="doing-item">
             <img
               src="./images/adaptive.jpg"
               alt="Адаптивная верстка сайтов"
@@ -94,7 +101,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="doing-item">
             <img
               src="./images/design.jpg"
               alt="Дизайн сайтов"
@@ -105,70 +112,75 @@
         </ul>
       </section>
       <!-- Секция Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="titles-sections">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/igor_dem.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="names">Игорь Демьяненко</h3>
+            <p class="profession">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/olga_rep.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="names">Ольга Репина</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/nikolai_tar.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="names">Николай Тарасов</h3>
+            <p class="profession">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/mihail_erm.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="names">Михаил Ермаков</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Секция Подвал -->
-    <footer>
-      <a href="#"><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a class="footer-logo" href="#"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
-        <ul>
-          <li>
+        <ul class="address-list">
+          <li class="address-item">
             <a
+              class="location"
               href="https://goo.gl/maps/VrpaVgQh39W8fAb86"
               target="_blank"
               rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
+              >г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li class="address-item">
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="address-item">
+            <a class="mail" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
