--- a/portfolio.html
+++ b/portfolio.html
@@ -5,30 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- Секция Верхняя линия -->
     <header>
-      <a href="#"><span>Web</span>Studio</a>
+      <a class="logo" href="#"><span class="logo-web">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="./index.html">Студия</a>
+          </li>
+          <li class="nav-item current-page">
+            <a href="#">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li>
+      <ul class="contact-list">
+        <li class="contact-item">
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="contact-item">
           <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
@@ -36,28 +45,28 @@
     <main>
       <!-- Секция Портфолио -->
       <section>
-        <h1 hidden>Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
         <!-- Блок Фильтры -->
-        <ul>
-          <li>
+        <ul class="filters-list">
+          <li class="filters-item">
             <button type="button">Все</button>
           </li>
-          <li>
+          <li class="filters-item">
             <button type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="filters-item">
             <button type="button">Приложения</button>
           </li>
-          <li>
+          <li class="filters-item">
             <button type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="filters-item">
             <button type="button">Маркетинг</button>
           </li>
         </ul>
         <!-- Блок Работы -->
-        <ul>
-          <li>
+        <ul class="works-list">
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/technokryak.jpg"
@@ -65,11 +74,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="name-product">Технокряк</h2>
+              <p class="type-product">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/no_vs_gs.jpg"
@@ -77,11 +86,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="name-product">Постер New Orlean vs Golden Star</h2>
+              <p class="type-product">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/restaurant_seafood.jpg"
@@ -89,11 +98,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="name-product">Ресторан Seafood</h2>
+              <p class="type-product">Приложение</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/project_prime.jpg"
@@ -101,11 +110,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="name-product">Проект Prime</h2>
+              <p class="type-product">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/project_boxes.jpg"
@@ -113,11 +122,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="name-product">Проект Boxes</h2>
+              <p class="type-product">Приложение</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/inspiration_has_no_borders.jpg"
@@ -125,11 +134,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="name-product">Inspiration has no Borders</h2>
+              <p class="type-product">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/limited_edition.jpg"
@@ -137,11 +146,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="name-product">Издание Limited Edition</h2>
+              <p class="type-product">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/project_lab.jpg"
@@ -149,11 +158,11 @@
                 width="370"
                 height="294"
               />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="name-product">Проект LAB</h2>
+              <p class="type-product">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="works-item">
             <a href="#">
               <img
                 src="./images/portfolio/growing_business.jpg"
@@ -161,31 +170,36 @@
                 width="370"
                 height="294"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="name-product">Growing Business</h2>
+              <p class="type-product">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
     <!-- Секция Подвал -->
-    <footer>
-      <a href="#"><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a class="footer-logo" href="#"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
-        <ul>
-          <li>
+        <ul class="address-list">
+          <li class="address-item">
             <a
+              class="location"
               href="https://goo.gl/maps/VrpaVgQh39W8fAb86"
               target="_blank"
               rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
+              >г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li class="address-item">
+            <a class="mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="address-item">
+            <a class="mail" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
